--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,214 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@font-face {
+  font-family: 'digital-clock-font';
+  src: url('./fonts/digital-7.ttf');
+}
 
-:root {
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    line-height: 1.5;
-    font-weight: 400;
+body {
+  margin: 1em;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: lightcyan;
+}
 
-    color-scheme: light dark;
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
 
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+p {
+  margin: 0;
+}
+
+td,
+th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+.clockStyle {
+  font-size: 18vw;
+  margin: .1em;
+  font-feature-settings: "tnum";
+  font-variant-numeric: 'tabular-nums lining-nums';
+  color: red;
+  user-select: none;
+}
+
+.clockContainer {
+  width: 80vw;
+  background-color: black;
+  padding: 24px;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1em;
+  position: relative;
+}
+
+.supportingText {
+  font-size: 6vw;
+  margin: .1em;
+  font-feature-settings: "tnum";
+  font-variant-numeric: 'tabular-nums lining-nums';
+  color: red;
+  user-select: none;
+}
+
+.btn {
+  background-color: whitesmoke;
+  border: 1px solid black;
+  border-radius: 8px;
+  padding: .5em;
+  cursor: pointer;
+  user-select: none;
+}
+
+.btn:hover {
+  transform: scale(1.1);
+}
+
+.btn:active {
+  background-color: lightgray;
+}
+
+.txtBtn {
+  margin: 0;
+  min-width: 1em;
+  min-height: 1em;
+  font-weight: bolder;
+  font-size: large;
+}
+
+.btnLogo {
+  width: 2rem;
+  user-select: none;
+}
+
+.btnContainer {
+  display: flex;
+  gap: .8em;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.button-group {
+  display: inline-flex;
+  border: 1px solid black;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.button-group input[type="radio"] {
+  display: none;
+}
+
+.button-group label {
+  padding: .5em 1em;
+  cursor: pointer;
+  background-color: whitesmoke;
+  color: red;
+  font-weight: bold;
+  border-right: 1px solid black;
+}
+
+.button-group label:last-of-type {
+  border-right: none;
+}
+
+.button-group input[type="radio"]:checked+label {
+  background-color: red;
+  border: 1px solid red;
+  color: whitesmoke;
+}
+
+.activeText {
+  color: lightgreen;
+}
+
+.tabataInfo {
+  position: absolute;
+  top: 0%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  gap: 1em;
+}
+
+
+.setContainer {
+  position: absolute;
+  right: 2%;
+  top: 2%;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+
+.setText {
+  font-size: 4vw;
+  margin: .1em;
+  font-feature-settings: "tnum";
+  font-variant-numeric: 'tabular-nums lining-nums';
+  background-color: lightgreen;
+  padding: 0em .2em;
+  border-radius: 8px;
+  user-select: none;
+}
+
+.notSetText {
+  font-size: 4vw;
+  margin: .1em;
+  font-feature-settings: "tnum";
+  font-variant-numeric: 'tabular-nums lining-nums';
+  background-color: red;
+  padding: 0em .2em;
+  border-radius: 8px;
+  user-select: none;
+}
+
+.clockLabel {
+  position: absolute;
+  left: 2%;
+  top: 2%;
+}
+
+.notStarted {
+  background-color: red;
+}
+
+.complete {
+  background-color: lightgreen;
+}
+
+.active {
+  background-color: green;
+}
+
+.miniClock {
+  background-color: black;
+  color: red;
+  padding: .2em;
+  border-radius: 8px;
+}
+
+.activeText {
+  color: lightgreen
+}
+
+.snapshot {
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  width: 7.1em;
+  align-items: center;
+  padding: 5em;
+  justify-content: start;
+  user-select: none;
+  min-height: 5lh;
 }
